[Publish] Signal Clone

--- a/app.json
+++ b/app.json
@@ -15,16 +15,24 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mustaquenadim.gossip"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mustaquenadim.gossip"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2731b6d0-b666-4492-ae99-42cf67c770a8"
+      }
+    },
+    "owner": "mustaquenadim"
   }
 }
